feat: update .wslconfig for auto memory reclaim and add README documentation

--- a/wsl/.wslconfig
+++ b/wsl/.wslconfig
@@ -1,9 +1,7 @@
 ﻿[wsl2]
-
 networkingMode=mirrored
-
-autoMemoryReclaim=gradual
-
 autoProxy=true
-
 dnsTunneling=true
+
+[experimental]
+autoMemoryReclaim=gradual  
